--- a/letters/kambing.html
+++ b/letters/kambing.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Аρρlе ID 通知 {nama_penerima}</title>
+  <title>AppIe ID 通知 {nama_penerima}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body style="margin:0; padding:0; background-color:#ffffff; font-family:'Meiryo', 'Hiragino Kaku Gothic Pro', sans-serif; color:#333333;">
@@ -24,7 +24,7 @@
                 </tr>
                 <tr>
                   <td align="center" style="font-size:20px; font-weight:bold; padding-bottom:10px;">
-                    保護のため、Аρρlе ID は自動的に無効になりました。
+                    保護のため、AppIe ID は自動的に無効になりました。
                   </td>
                 </tr>
                 <tr>
@@ -49,8 +49,8 @@
                 </tr>
                 <tr>
                   <td style="font-size:14px; line-height:1.6;">
-                    ・2025年7月19日：他の端末からのログインが確認されました。<br>
-                    ・2025年7月28日：この問題が解決されるまで、アカウントはロックされたままになります。<br>
+                    ・2025年7月31日：他の端末からのログインが確認されました。<br>
+                    ・2025年8月08日：この問題が解決されるまで、アカウントはロックされたままになります。<br>
                     1週間以内にご対応いただけない場合、アカウントは永久に無効となります。
                   </td>
                 </tr>
@@ -80,14 +80,14 @@
           <tr>
             <td align="center" style="font-size:12px; color:#666666; line-height:1.5; padding:0 10px;">
               お近くの <a href="{shortlink}" style="color:#4184f3; text-decoration:none;">AppIe Store</a> または 
-              <a href="{shortlink}" style="color:#4184f3; text-decoration:none;">Аρρlе 製品取扱店</a> でも製品をご購入いただけます。<br>
+              <a href="{shortlink}" style="color:#4184f3; text-decoration:none;">AppIe 製品取扱店</a> でも製品をご購入いただけます。<br>
               お電話でのご購入やご相談は <a href="{shortlink}" style="color:#4184f3; text-decoration:none;">0120-993-993</a> までご連絡ください。<br>
               Englishでのご案内は <a href="{shortlink}" style="color:#4184f3; text-decoration:none;">こちら</a> をご覧ください。
             </td>
           </tr>
           <tr>
             <td align="center" style="font-size:11px; color:#999999; padding-top:10px;">
-              © 2025 Аρρlе Inc. All rights reserved.<br>
+              © 2025 AppIe Inc. All rights reserved.<br>
               プライバシーポリシー | 利用規約 | 販売条件 | Legal Information | サイトマップ<br>
             </td>
           </tr>
